feat: add auto-instrumentation to service
